sample-app/1.0.0/bundle/config/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app: sample-app
    enableBackup: "true"
spec:
  type: LoadBalancer
  selector:
    app: sample-app
    enableBackup: "true"
  ports:
  - port: 8080
    targetPort: 80
